Disable background-color transition because it takes too much computational power; creates bugs in height transitions, which are more important

--- a/styles.scss
+++ b/styles.scss
@@ -135,7 +135,7 @@
 
 
 .entry {
-    transition: background-color .3s;
+    // transition: background-color .3s;
     display: flex;
     align-items: center;
     &.odd {
